Пакрафт. Сверстал блоки team и booking

--- a/Packraft/index.html
+++ b/Packraft/index.html
@@ -313,7 +313,7 @@
 </div>  
 
 
-<!-- Price -->
+<!-- price -->
 <div class="price">
     <div class="container">
         <h2 class="price__title">Цены</h2>
@@ -372,14 +372,95 @@
             Аккуратным туристам, возвращающим чистые, сухие и целые лодки мы делаем хорошие скидки! :)
             </div>
         </div>
-
-
-        
     </div>
 </div>
 
 
+<!-- paralax_2 -->
+<div class="parallax">
+    <div class="parallaxPhoto parallax__2">
+        <h2 class="caption">FAQ</h2>
+        <h3 class="subCaption">Популярные вопросы</h3>
+        <div class="paralax__arrow">
+            <svg class="paralaxIcon">
+                <use xlink:href="#arrow"></use>
+            </svg> 
+        </div>
+    </div>
+</div>
 
+<!-- booking -->
+<div class="booking">
+    <p style="text-align: center;"><a href="#" class="btn">Забронировать</a></p>
+</div>
+
+<!-- Team -->
+<div class="team">
+    <div class="container">
+    <h2 class="team__title">Кто мы ?</h2>
+    <div class="team__description">
+    Мы основатели и участники @Packrafters — сообщества о сплавах на пакрафтах в России и за её пределами (VK, IG) <br>
+    Сплавляемся на пакрафтах уже больше шести лет, организуем ежегодный Пакрафт-фест, курсы бурноводного пакрафтинга и водим коммерческие туры на пакрафтах. <br>
+    Для аренды мы подбираем оборудование которое сами используем в наших турах, которому доверяем и уверены в его надёжности.
+    </div>
+    <div class="team__inner">
+        <div class="team__item">
+            <img src="img/team/team_1.webp" class="team__photo">
+            <div class="team__name">Лена Бугрова</div>
+            <div class="team__prof">Райдо.Bros</div>
+            <div class="team__city">Москва</div>
+        </div>
+        <div class="team__item">
+            <img src="img/team/team_2.webp" class="team__photo">
+            <div class="team__name">Саша Хворостянов</div>
+            <div class="team__prof">@Packrafters</div>
+            <div class="team__city">Орёл</div>
+        </div>
+        <div class="team__item">
+            <img src="img/team/team_3.webp" class="team__photo">
+            <div class="team__name">Рома Ильиных</div>
+            <div class="team__prof">Pr0 packrafting</div>
+            <div class="team__city">Санкт Петербург</div>
+        </div>
+        <div class="team__item">
+            <img src="img/team/team_4.webp" class="team__photo">
+            <div class="team__name">Дима Советов</div>
+            <div class="team__prof">Уральский Горный Клуб</div>
+            <div class="team__city">Пермь</div>
+        </div>
+        <div class="team__item">
+            <img src="img/team/team_5.webp" class="team__photo">
+            <div class="team__name">Аня Сумкина</div>
+            <div class="team__prof">Voda Gear</div>
+            <div class="team__city">Сочи и Красная Поляна</div>
+        </div>
+        <div class="team__item">
+            <img src="img/team/team_6.webp" class="team__photo">
+            <div class="team__name">Миша Волков</div>
+            <div class="team__prof"></div>
+            <div class="team__city">Норильск</div>
+        </div>
+        <div class="team__item">
+            <img src="img/team/team_7.webp" class="team__photo">
+            <div class="team__name">Иван Дёров</div>
+            <div class="team__prof">VanderWay</div>
+            <div class="team__city">Киров/Вятка</div>
+        </div>
+    </div>
+    <div class="team__verticalContainer">
+        <span class="team__verticalline"></span>
+    </div>
+    <div class="team__addition">
+    Если вы хотите больше узнать о том, как начать сплавляться на пакрафтах, то посмотрите нашу лекцию об этом в Лектории Спорт Марафона, она как раз про это:
+    </div>
+
+
+
+
+
+
+    </div>
+</div>
 
 
 
