Начал делать блок FAQ

--- a/Packraft/index.html
+++ b/Packraft/index.html
@@ -389,6 +389,16 @@
     </div>
 </div>
 
+<!-- faq -->
+<div class="faq">
+    <div class="faq__inner">
+        <div class="faq__item">Я никогда не сидел в лодке и не умею грести, это сложно?</div>
+        <div class="faq__item">Я никогда не сидел в лодке и не умею грести, это сложно?</div>
+    </div>
+</div>
+
+
+
 <!-- booking -->
 <div class="booking">
     <p style="text-align: center;"><a href="#" class="btn">Забронировать</a></p>
@@ -453,19 +463,10 @@
     <div class="team__addition">
     Если вы хотите больше узнать о том, как начать сплавляться на пакрафтах, то посмотрите нашу лекцию об этом в Лектории Спорт Марафона, она как раз про это:
     </div>
-
-
-
-
-
-
     </div>
 </div>
 
-
-
-
-
+<!-- footer -->
 <footer>
     <div class="footer__brend">
         <svg class="footer__icon">
