Пакрафт. Дополнил раздел FAQ

--- a/Packraft/index.html
+++ b/Packraft/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Пакрафт-прокат</title>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
+    <script src="lib/jquery-1.7.1.min.js"></script>
 </head>
 <body>
 <!-- Sprite -->
@@ -392,8 +393,60 @@
 <!-- faq -->
 <div class="faq">
     <div class="faq__inner">
-        <div class="faq__item">Я никогда не сидел в лодке и не умею грести, это сложно?</div>
-        <div class="faq__item">Я никогда не сидел в лодке и не умею грести, это сложно?</div>
+        <div class="faq__item">
+            <h1 class="faq__click">Я никогда не сидел в лодке и не умею грести, это сложно?</h1>
+            <div class="faq__slide">
+                — Основы управления пакрафтом осваивают за 15−20 минут даже дети и новички, ни разу не державшие в руках весло!)
+            </div>
+        </div>
+        <div class="faq__item">
+            <h1 class="faq__click">А он не перевернётся?</h1>
+            <div class="faq__slide">
+                — Пакрафт широкая посудина с плоским дном, он очень устойчив и чтобы перевернуть его надо очень постараться)
+            </div>
+        </div>
+        <div class="faq__item">
+            <h1 class="faq__click">Я не умею плавать! Что если я выпаду из лодки?</h1>
+            <div class="faq__slide">
+                — К каждому пакрафту мы выдаём страховочный жилет, он удержит вас на поверхности и позволит выплыть даже без лодки.
+            </div>
+        </div>
+        <div class="faq__item">
+            <h1 class="faq__click">А если он проткнётся?</h1>
+            <div class="faq__slide">
+               — Материал пакрафта крепкий. Он устойчив к проколу и истиранию, но даже если вдруг он просто чинится в походных условиях. К каждому пакрафту мы выдаём ремкомплект.
+            </div>
+        </div>
+        <div class="faq__item">
+            <h1 class="faq__click">У меня с собой много вещей, а лодка маленькая!</h1>
+            <div class="faq__slide">
+                — Благодаря большому объёму баллонов в пакрафте комфортно помещается человек с вещами и продуктами на несколько недель похода, или с велосипедом, или с ребёнком.
+            </div>
+        </div>
+        <div class="faq__item">
+            <h1 class="faq__click">Что входит в комплект аренды?</h1>
+            <div class="faq__slide">
+                — Пакрафт и полный комплект снаряги, необходимый для сплава: весло, спасжилет, гермомешок для защиты вещей от намокания, ремкомплект.
+            </div>
+        </div>
+        <div class="faq__item">
+            <h1 class="faq__click">Хочу покататься на пакрафте с ребёнком, это можно?</h1>
+            <div class="faq__slide">
+                — Да, для ребёнка мы бесплатно выдадим вам детский спасательный жилет.
+            </div>
+        </div>
+        <div class="faq__item">
+            <h1 class="faq__click">Где я могу покататься на пакрафте?</h1>
+            <div class="faq__slide">
+                — Для катания подойдет любой водоём: ближайшая река или озеро в черте города или за его пределами.
+            </div>
+        </div>
+        <div class="faq__item">
+            <h1 class="faq__click">Как лучше одеться для водного похода?</h1>
+            <div class="faq__slide">
+               — Мы рекомендуем иметь отдельный комплект одежды и обуви для сплава, в зависимости от температуры это может быть неопреновый комбинезон и ботинки или брызгозащитная куртка и штаны с неопреновыми носками и Кроксами (или аналогичными ЭВА-сандалями).
+            </div>
+        </div>
     </div>
 </div>
 
@@ -487,5 +540,10 @@
         </svg>
     </div>
 </footer>
+<script>
+    $(".faq__click").click(function () {
+      $(this).siblings(".faq__slide").slideToggle("fast");
+    });
+</script>
 </body>
 </html>
