--- a/Packraft/index.html
+++ b/Packraft/index.html
@@ -107,6 +107,12 @@
         <path style="fill: #fff;" d="M15.5,11.122c-1.026-1.036-2.007-2.026-2.986-3.017c-0.385-0.39-0.413-0.895-0.075-1.251 c0.361-0.381,0.886-0.371,1.296,0.037c1.136,1.131,2.267,2.266,3.401,3.399c0.346,0.346,0.694,0.69,1.037,1.038 c0.425,0.43,0.431,0.921,0.01,1.343c-1.462,1.466-2.926,2.931-4.392,4.393c-0.384,0.383-0.898,0.398-1.253,0.053 c-0.366-0.357-0.356-0.877,0.038-1.273c0.925-0.929,1.855-1.854,2.786-2.778c0.051-0.051,0.122-0.081,0.183-0.121 c-0.014-0.035-0.027-0.069-0.041-0.104c-0.115,0-0.229,0-0.344,0c-2.841,0-5.683,0-8.524-0.001c-0.135,0-0.271-0.001-0.405-0.018 c-0.438-0.056-0.738-0.419-0.726-0.868c0.012-0.442,0.34-0.795,0.776-0.829c0.114-0.009,0.229-0.004,0.343-0.004 c2.821,0,5.641,0,8.462,0C15.208,11.122,15.33,11.122,15.5,11.122z"></path>
     </g>
 </symbol>
+<symbol id="plus" viewBox="0 0 512 512">
+    <g>
+        <path d="M492,236H276V20c0-11.046-8.954-20-20-20c-11.046,0-20,8.954-20,20v216H20c-11.046,0-20,8.954-20,20s8.954,20,20,20h216
+            v216c0,11.046,8.954,20,20,20s20-8.954,20-20V276h216c11.046,0,20-8.954,20-20C512,244.954,503.046,236,492,236z"/>
+    </g>
+</symbol>
 
 </svg>
 
@@ -122,11 +128,11 @@
                 </svg>
             </a>
             <nav class="nav" id="nav">
-                <a class="nav__link" href="#" data-scroll="#features">Что это?</a>
-                <a class="nav__link" href="#" data-scroll="#works">Пакрафт</a>
-                <a class="nav__link" href="#" data-scroll="#team">Цены</a>
-                <a class="nav__link" href="#" data-scroll="#reviews">Как арендовать</a>
-                <a class="nav__link" href="#" data-scroll="#download">О нас</a>
+                <a class="nav__link" href="#" data-scroll="#whatIsIt">Что это?</a>
+                <a class="nav__link" href="#" data-scroll="#parallax">Пакрафт</a>
+                <a class="nav__link" href="#" data-scroll="#price">Цены</a>
+                <a class="nav__link" href="#" data-scroll="#booking">Как арендовать</a>
+                <a class="nav__link" href="#" data-scroll="#team">О нас</a>
             </nav>
             <div class="neader__social">
                 <svg class="social__icon">
@@ -167,7 +173,8 @@
 
 
 <!-- whatIsIt -->
-<div class="whatIsIt">
+<div class="whatIsIt" id="whatIsIt">
+    <a name="link1"></a>
     <div class="whatIsIt__iner">
         <div class="whatIsIt__description">
             <h2 class="whatIsIt__title">Что такое <br> пакрафт?</h2>
@@ -241,7 +248,7 @@
 </div>
 
 
-<div class="parallax">
+<div class="parallax" id="parallax">
     <div class="parallaxPhoto parallax__1">
         <h2 class="caption">Какие пакрафты мы предлагаем</h2>
         <div class="paralax__arrow">
@@ -315,7 +322,7 @@
 
 
 <!-- price -->
-<div class="price">
+<div class="price" id="price">
     <div class="container">
         <h2 class="price__title">Цены</h2>
         <h3 class="price__subtitle">(могут различаться в зависимости от региона)</h3>
@@ -394,55 +401,100 @@
 <div class="faq">
     <div class="faq__inner">
         <div class="faq__item">
-            <h1 class="faq__click">Я никогда не сидел в лодке и не умею грести, это сложно?</h1>
+            <h1 class="faq__click">
+                Я никогда не сидел в лодке и не умею грести, это сложно? 
+                <svg class="faq__icon">
+                    <use xlink:href="#plus"></use>
+                </svg> 
+            </h1>
             <div class="faq__slide">
                 — Основы управления пакрафтом осваивают за 15−20 минут даже дети и новички, ни разу не державшие в руках весло!)
             </div>
         </div>
         <div class="faq__item">
-            <h1 class="faq__click">А он не перевернётся?</h1>
+            <h1 class="faq__click">
+                А он не перевернётся?
+                <svg class="faq__icon">
+                    <use xlink:href="#plus"></use>
+                </svg> 
+            </h1>
             <div class="faq__slide">
                 — Пакрафт широкая посудина с плоским дном, он очень устойчив и чтобы перевернуть его надо очень постараться)
             </div>
         </div>
         <div class="faq__item">
-            <h1 class="faq__click">Я не умею плавать! Что если я выпаду из лодки?</h1>
+            <h1 class="faq__click">
+                Я не умею плавать! Что если я выпаду из лодки?
+                <svg class="faq__icon">
+                    <use xlink:href="#plus"></use>
+                </svg> 
+            </h1>
             <div class="faq__slide">
                 — К каждому пакрафту мы выдаём страховочный жилет, он удержит вас на поверхности и позволит выплыть даже без лодки.
             </div>
         </div>
         <div class="faq__item">
-            <h1 class="faq__click">А если он проткнётся?</h1>
+            <h1 class="faq__click">
+                А если он проткнётся?
+                <svg class="faq__icon">
+                    <use xlink:href="#plus"></use>
+                </svg> 
+            </h1>
             <div class="faq__slide">
                — Материал пакрафта крепкий. Он устойчив к проколу и истиранию, но даже если вдруг он просто чинится в походных условиях. К каждому пакрафту мы выдаём ремкомплект.
             </div>
         </div>
         <div class="faq__item">
-            <h1 class="faq__click">У меня с собой много вещей, а лодка маленькая!</h1>
+            <h1 class="faq__click">
+                У меня с собой много вещей, а лодка маленькая!
+                <svg class="faq__icon">
+                    <use xlink:href="#plus"></use>
+                </svg> 
+            </h1>
             <div class="faq__slide">
                 — Благодаря большому объёму баллонов в пакрафте комфортно помещается человек с вещами и продуктами на несколько недель похода, или с велосипедом, или с ребёнком.
             </div>
         </div>
         <div class="faq__item">
-            <h1 class="faq__click">Что входит в комплект аренды?</h1>
+            <h1 class="faq__click">
+                Что входит в комплект аренды?
+                <svg class="faq__icon">
+                    <use xlink:href="#plus"></use>
+                </svg> 
+            </h1>
             <div class="faq__slide">
                 — Пакрафт и полный комплект снаряги, необходимый для сплава: весло, спасжилет, гермомешок для защиты вещей от намокания, ремкомплект.
             </div>
         </div>
         <div class="faq__item">
-            <h1 class="faq__click">Хочу покататься на пакрафте с ребёнком, это можно?</h1>
+            <h1 class="faq__click">
+                Хочу покататься на пакрафте с ребёнком, это можно?
+                <svg class="faq__icon">
+                    <use xlink:href="#plus"></use>
+                </svg> 
+            </h1>
             <div class="faq__slide">
                 — Да, для ребёнка мы бесплатно выдадим вам детский спасательный жилет.
             </div>
         </div>
         <div class="faq__item">
-            <h1 class="faq__click">Где я могу покататься на пакрафте?</h1>
+            <h1 class="faq__click">
+                Где я могу покататься на пакрафте?
+                <svg class="faq__icon">
+                    <use xlink:href="#plus"></use>
+                </svg> 
+            </h1>
             <div class="faq__slide">
                 — Для катания подойдет любой водоём: ближайшая река или озеро в черте города или за его пределами.
             </div>
         </div>
         <div class="faq__item">
-            <h1 class="faq__click">Как лучше одеться для водного похода?</h1>
+            <h1 class="faq__click">
+                Как лучше одеться для водного похода?
+                <svg class="faq__icon">
+                    <use xlink:href="#plus"></use>
+                </svg> 
+            </h1>
             <div class="faq__slide">
                — Мы рекомендуем иметь отдельный комплект одежды и обуви для сплава, в зависимости от температуры это может быть неопреновый комбинезон и ботинки или брызгозащитная куртка и штаны с неопреновыми носками и Кроксами (или аналогичными ЭВА-сандалями).
             </div>
@@ -453,12 +505,12 @@
 
 
 <!-- booking -->
-<div class="booking">
+<div class="booking" id="booking">
     <p style="text-align: center;"><a href="#" class="btn">Забронировать</a></p>
 </div>
 
 <!-- Team -->
-<div class="team">
+<div class="team" id="team">
     <div class="container">
     <h2 class="team__title">Кто мы ?</h2>
     <div class="team__description">
@@ -541,9 +593,33 @@
     </div>
 </footer>
 <script>
-    $(".faq__click").click(function () {
-      $(this).siblings(".faq__slide").slideToggle("fast");
+
+    $(".faq__click").toggle(
+        function(){
+            $(this).siblings(".faq__slide").slideToggle();
+            $(this).children(".faq__icon").css("transform", "rotate(45deg)");
+        },
+        function(){
+            $(this).siblings(".faq__slide").slideToggle();
+            $(this).children(".faq__icon").css("transform", "rotate(0deg)");
+        }
+    )
+
+    /*Добавляем scroll при клике по ссылкам меню*/
+
+    $('.nav__link').click(function() {
+       var scrollName = $(this).attr('data-scroll'),
+           scrollElem = $(scrollName),
+           scrollTop = scrollElem.offset().top;
+       
+       $('html, body').animate({
+          scrollTop: scrollTop
+       }, 500);
     });
+
+
+
+
 </script>
 </body>
 </html>
