Дополнил проект DJI

--- a/DJI/index.html
+++ b/DJI/index.html
@@ -33,6 +33,32 @@
 </div>
 
 
+<!-- Works -->
+<div class="works"  id="works">
+    <div class="works__item">
+        <img src="img/works/dji_1.jpg" alt="" class="works__photo">
+    </div>
+    <div class="works__item">
+        <img src="img/works/dji_2.jpg" alt="" class="works__photo">
+    </div>
+    <div class="works__item">
+        <img src="img/works/dji_3.jpg" alt="" class="works__photo">
+    </div>
+
+    <div class="works__item">
+        <img src="img/works/dji_4.jpg" alt="" class="works__photo">
+    </div>
+    <div class="works__item">
+        <img src="img/works/dji_5.jpg" alt="" class="works__photo">
+    </div>
+    <div class="works__item">
+        <img src="img/works/dji_6.jpg" alt="" class="works__photo">
+    </div>
+</div>
+
+
+<!-- footer -->
+<div class="footer"></div>
 	
 </body>
 </html>
