Внес изменения в проект dji

--- a/DJI/index.html
+++ b/DJI/index.html
@@ -9,6 +9,40 @@
 </head>
 <body>
 
+<!-- Sprite -->
+<svg style="display: none;">
+<symbol id="vk" viewBox="0 0 97.75 97.75">
+    <g>
+    <g>
+    <path d="M48.875,0C21.883,0,0,21.882,0,48.875S21.883,97.75,48.875,97.75S97.75,75.868,97.75,48.875S75.867,0,48.875,0z
+         M73.667,54.161c2.278,2.225,4.688,4.319,6.733,6.774c0.906,1.086,1.76,2.209,2.41,3.472c0.928,1.801,0.09,3.776-1.522,3.883
+        l-10.013-0.002c-2.586,0.214-4.644-0.829-6.379-2.597c-1.385-1.409-2.67-2.914-4.004-4.371c-0.545-0.598-1.119-1.161-1.803-1.604
+        c-1.365-0.888-2.551-0.616-3.333,0.81c-0.797,1.451-0.979,3.059-1.055,4.674c-0.109,2.361-0.821,2.978-3.19,3.089
+        c-5.062,0.237-9.865-0.531-14.329-3.083c-3.938-2.251-6.986-5.428-9.642-9.025c-5.172-7.012-9.133-14.708-12.692-22.625
+        c-0.801-1.783-0.215-2.737,1.752-2.774c3.268-0.063,6.536-0.055,9.804-0.003c1.33,0.021,2.21,0.782,2.721,2.037
+        c1.766,4.345,3.931,8.479,6.644,12.313c0.723,1.021,1.461,2.039,2.512,2.76c1.16,0.796,2.044,0.533,2.591-0.762
+        c0.35-0.823,0.501-1.703,0.577-2.585c0.26-3.021,0.291-6.041-0.159-9.05c-0.28-1.883-1.339-3.099-3.216-3.455
+        c-0.956-0.181-0.816-0.535-0.351-1.081c0.807-0.944,1.563-1.528,3.074-1.528l11.313-0.002c1.783,0.35,2.183,1.15,2.425,2.946
+        l0.01,12.572c-0.021,0.695,0.349,2.755,1.597,3.21c1,0.33,1.66-0.472,2.258-1.105c2.713-2.879,4.646-6.277,6.377-9.794
+        c0.764-1.551,1.423-3.156,2.063-4.764c0.476-1.189,1.216-1.774,2.558-1.754l10.894,0.013c0.321,0,0.647,0.003,0.965,0.058
+        c1.836,0.314,2.339,1.104,1.771,2.895c-0.894,2.814-2.631,5.158-4.329,7.508c-1.82,2.516-3.761,4.944-5.563,7.471
+        C71.48,50.992,71.611,52.155,73.667,54.161z"/>
+</g>
+</symbol>
+<symbol id="instagram" viewBox="0 0 30 30">
+    <g>
+        <path style="fill:#ffffff;" d="M15,11.014 C12.801,11.014 11.015,12.797 11.015,15 C11.015,17.202 12.802,18.987 15,18.987 C17.199,18.987 18.987,17.202 18.987,15 C18.987,12.797 17.199,11.014 15,11.014 L15,11.014 Z M15,17.606 C13.556,17.606 12.393,16.439 12.393,15 C12.393,13.561 13.556,12.394 15,12.394 C16.429,12.394 17.607,13.561 17.607,15 C17.607,16.439 16.444,17.606 15,17.606 L15,17.606 Z"></path>
+        <path style="fill:#ffffff;" d="M19.385,9.556 C18.872,9.556 18.465,9.964 18.465,10.477 C18.465,10.989 18.872,11.396 19.385,11.396 C19.898,11.396 20.306,10.989 20.306,10.477 C20.306,9.964 19.897,9.556 19.385,9.556 L19.385,9.556 Z"></path>
+        <path style="fill:#ffffff;" d="M15.002,0.15 C6.798,0.15 0.149,6.797 0.149,15 C0.149,23.201 6.798,29.85 15.002,29.85 C23.201,29.85 29.852,23.202 29.852,15 C29.852,6.797 23.201,0.15 15.002,0.15 L15.002,0.15 Z M22.666,18.265 C22.666,20.688 20.687,22.666 18.25,22.666 L11.75,22.666 C9.312,22.666 7.333,20.687 7.333,18.28 L7.333,11.734 C7.333,9.312 9.311,7.334 11.75,7.334 L18.25,7.334 C20.688,7.334 22.666,9.312 22.666,11.734 L22.666,18.265 L22.666,18.265 Z"></path>
+    </g>
+</symbol>
+<symbol id="telegram" viewBox="0 0 24 24">
+    <g>
+        <path d="m12 24c6.629 0 12-5.371 12-12s-5.371-12-12-12-12 5.371-12 12 5.371 12 12 12zm-6.509-12.26 11.57-4.461c.537-.194 1.006.131.832.943l.001-.001-1.97 9.281c-.146.658-.537.818-1.084.508l-3-2.211-1.447 1.394c-.16.16-.295.295-.605.295l.213-3.053 5.56-5.023c.242-.213-.054-.333-.373-.121l-6.871 4.326-2.962-.924c-.643-.204-.657-.643.136-.953z"/>
+    </g>
+</symbol>
+</svg>
+
 <!-- Intro -->
 <div class="intro">
 </div>
@@ -57,8 +91,83 @@
 </div>
 
 
+<!-- rent -->
+<div class="rent">
+	<div class="container">
+	<h1 class="rent__title">Зачем брать квадрокоптер в аренду.</h1>
+	<div class="rent__item">
+		<div class="rent__photo">
+			<img src="img/works/dji_1.jpg" alt="" class="rent__img">
+		</div>
+		<div class="rent__text">
+			Хороший квадрокоптер игрушка дорогая и совместная его эксплуатация может снизить стоимость владения. 
+		</div>
+	</div>
+
+	<div class="rent__item">
+		<div class="rent__text">
+			Прежде чем покупать квадрокоптер не плохо было бы понять, а нужно ли оно тебе. Некоторые люди покупают себе дрон и попользовавшись несколько раз, забрасывают новую игрушку на полку, где она лежит мертвым капиталом. 
+		</div>
+		<div class="rent__photo">
+			<img src="img/works/dji_2.jpg" alt="" class="rent__img">
+		</div>
+	</div>
+
+	<div class="rent__item">
+		<div class="rent__photo">
+			<img src="img/works/dji_3.jpg" alt="" class="rent__img">
+		</div>
+		<div class="rent__text">
+			Можно научится летать на дроне и уже понимая чего хотеть попробовать поискать дрон б/у.
+		</div>
+	</div>
+
+	<div class="rent__item">
+		<div class="rent__text">
+			Вероятность отказа, а как следствие и потери дешевого дрона из-за ни качественной электроники, аккумуляторов или помех гораздо выше.  
+		</div>
+		<div class="rent__photo">
+			<img src="img/works/dji_4.jpg" alt="" class="rent__img">
+		</div>
+	</div>
+	
+	<div class="rent__item">
+		<div class="rent__photo">
+			<img src="img/works/dji_5.jpg" alt="" class="rent__img">
+		</div>
+		<div class="rent__text">
+			Дорогой дрон напичкан автоматикой помогающей сделать пилотирование максимально простым. Те дроны, у которых нет такой автоматики, требуют хороших навыков пилотирования которые приобрести ни так то просто.
+		</div>
+	</div>
+
+	<div class="rent__item">
+		<div class="rent__text">
+			Качество картинки с дешевого дрона так же навряд ли тебя устроит. 
+		</div>
+		<div class="rent__photo">
+			<img src="img/works/dji_6.jpg" alt="" class="rent__img">
+		</div>
+	</div>	
+	</div>
+</div>
+
+
 <!-- footer -->
-<div class="footer"></div>
+<footer>
+     <p class="footer__contacts">Контакты <br> +7 916 832-72-00 <br> hello@packrafters.ru</p>
+    <p class="footer__copyright">не является публичной офертой</p>
+    <div class="footer__social">
+        <svg class="social__icon">
+            <use xlink:href="#vk"></use>
+        </svg>
+        <svg class="social__icon">
+            <use xlink:href="#instagram"></use>
+        </svg>
+        <svg class="social__icon">
+            <use xlink:href="#telegram"></use>
+        </svg>
+    </div>
+</footer>
 	
 </body>
 </html>
