--- a/Mramorka/main.html
+++ b/Mramorka/main.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mramorka</title>
+
     <link rel="stylesheet" type="text/css" href="lib/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="lib/slick/slick-theme.css"/>
     <link rel="stylesheet" type="text/css" href="lib/fancybox/jquery.fancybox.css"/>
@@ -65,17 +66,17 @@
         </div>
 
         <nav class="nav" id="nav">
-            <a class="nav__link" href="#" data-scroll="#features">Команда</a>
-            <a class="nav__link" href="#" data-scroll="#works">Услуги</a>
-            <a class="nav__link" href="#" data-scroll="#team">Спорт</a>
-            <a class="nav__link" href="#" data-scroll="#reviews">Интересные факты</a>
+            <a class="nav__link" href="team.html" ">Команда</a>
+            <a class="nav__link" href="service.html">Услуги</a>
+            <a class="nav__link" href="#">Спорт</a>
+            <a class="nav__link" href="#">Интересные факты</a>
         </nav>
     </div>
 </header>
 
 
 <div class="intro">
-    <div class="intro__photo">
+    <div class="intro__photo intro__photo--main">
         <h2 class="intro__caption">Экстрим - парк Мраморка</h2>
     </div>
 </div>
@@ -258,12 +259,12 @@
 
 
 
-<div class="call">
+<div class="call call--main">
     <div class="call__iner">
-        <div class="call__title">Хотите окунуться в мир невероятных ощущений?</div>
+        <div class="call__title call__title--main">Хотите окунуться в мир невероятных ощущений?</div>
         <p class="call__text">Звоните прямо сейчас</p>
         <p class="call__text">На связи Александр</p>
-        <div class="call__link">
+        <div class="call__link call__link--main">
             <a href="#" class="btn btn--blue">позвонить</a>
         </div>
     </div>
