Мраморка. Начал делать страницу по соревнованиям

--- a/Mramorka/main.html
+++ b/Mramorka/main.html
@@ -68,8 +68,8 @@
         <nav class="nav" id="nav">
             <a class="nav__link" href="team.html" ">Команда</a>
             <a class="nav__link" href="service.html">Услуги</a>
-            <a class="nav__link" href="#">Спорт</a>
-            <a class="nav__link" href="#">Интересные факты</a>
+            <a class="nav__link" href="competition.html">Спорт</a>
+            <a class="nav__link" href="history.html">Интересные факты</a>
         </nav>
     </div>
 </header>
