--- a/Mramorka/team.html
+++ b/Mramorka/team.html
@@ -13,14 +13,14 @@
     <div class="header__inner">
         <div class="header__logo">
             Экстрим-парк Мраморка
-        </div>
+        </div>+
 
         <nav class="nav" id="nav">
         	<a class="nav__link nav__link--2" href="main.html" >Главная</a>
             <a class="nav__link nav__link--2" href="team.html" >Команда</a>
             <a class="nav__link nav__link--2" href="service.html" >Услуги</a>
-            <a class="nav__link nav__link--2" href="#" >Спорт</a>
-            <a class="nav__link nav__link--2" href="#" >Интересные факты</a>
+            <a class="nav__link nav__link--2" href="competition.html" >Спорт</a>
+            <a class="nav__link nav__link--2" href="history.html" >Интересные факты</a>
         </nav>
     </div>
 </header>
