Мраморка. Начал делать страницу с историей

--- a/Mramorka/competition.html
+++ b/Mramorka/competition.html
@@ -68,7 +68,6 @@
 		<p>Приглашаем всех присоединиться к нашему клубу, ограничений нет. Будем вместе путешествовать, лазить по скалам, ходить в горы, много тренироваться, учиться новому, участвовать в соревнованиях и весело проводить время.</p>
     </div>
     </div>
-
 </div>
 
 <div class="events">
@@ -139,12 +138,62 @@
             <a href="#" class="btn btn--blue">Подать заявку на Кубок России</a>
         </div>
 
-		
-
 	</div>
 </div>
 
 
+<div class="sport">
+	<h2 class="sport__title">Спортивный 2019 г</h2>
+	<h3 class="sport__subtitle">Подробнее обо всех мероприятиях которые мы провели в этом году</h3>
+	<div class="sport__wraper">
+		<div class="card">
+			<img src="img/sport/2019_1.webp" alt="" class="card__photo">
+			<div class="card__text">
+				<p class="card__title">1-ый Этап Кубка России</p>
+				<p class="card__subtitle">Альпинизм. Класс скальный</p> 
+			</div>
+			<p class="card__nav">
+				<a href="#" class="card__link card__link--black">Как это было</a>
+				<a href="#" class="card__link">Видео</a>
+			</p>
+		</div>
+		<div class="card">
+			<img src="img/sport/2019_2.webp" alt="" class="card__photo">
+			<div class="card__text">
+				<p class="card__title">Открытый Чемпионат Хакасии</p>
+				<p class="card__subtitle">Альпинизм. Класс скальный</p> 
+			</div>
+			<p class="card__nav">
+				<a href="#" class="card__link card__link--black">Как это было</a>
+				<a href="#" class="card__link">Видео</a>
+			</p>			
+		</div>
+		<div class="card">
+			<img src="img/sport/2019_3.webp" alt="" class="card__photo">
+			<div class="card__text">
+				<p class="card__title">Фестиваль трэда и свободного лазания</p>
+				<p class="card__subtitle">Скалолазание. ТРЭД</p> 
+			</div>
+			<p class="card__nav">
+				<a href="#" class="card__link card__link--black">Как это было</a>
+				<a href="#" class="card__link">Видео</a>
+			</p>		
+		</div>
+		<div class="card">
+			<img src="img/sport/2019_4.webp" alt="" class="card__photo">
+			<div class="card__text">
+				<p class="card__title">Чемпионат Хакасии среди ветеранов</p>
+				<p class="card__subtitle">Скалолазание. Парная гонка</p> 
+			</div>
+			<p class="card__nav">
+				<a href="#" class="card__link card__link--black">Как это было</a>
+				<a href="#" class="card__link">Видео</a>
+			</p>				
+		</div>
+	</div>
+
+
+</div>
 
 
 
