--- a/Mramorka/history.html
+++ b/Mramorka/history.html
@@ -5,7 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Мраморка</title>
 
+    <link rel="stylesheet" type="text/css" href="lib/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="lib/slick/slick-theme.css"/>
 	<link rel="stylesheet" href="style.css">
+
+	<script type="text/javascript" src="lib/jquery-3.2.1.min.js"></script>
+    <script src="lib/slick/slick.min.js"></script>
 </head>
 
 <body>
@@ -36,45 +41,122 @@
 </div>
 
 
-
-
-
-
-
-
-
-
-<div class="service">
-	<h2 class="service__title">Мы предлагаем вам погрузиться в мир вертикальных приключений</h2>
-	<div class="service__iner">
-		<div class="service__row serivce__row--reverse">
-			<div class="service__photo">
-				<img src="img/service/1.webp" alt="" class="service__img">
+<div class="facts">
+	<div class="facts__wraper">
+		<div class="facts__item">
+			<div class="facts__title">Мраморка и Мраморная гора</div>
+			<div class="facts__text">
+				На самом верху экстрим-парка Мраморка находится Мраморный карьер. Это действующий рудник в котором по сей день ведется добыча полезных ископаемых. <br>
+				Экстрим-парк и карьер - это совершенно разные объекты. Объединяет их лишь Саянский мрамор .
 			</div>
-			<div class="service__text">
-				<h3 class="service__subtitle">Вход в парк</h3>
-				<div class="service__description">
-					<p>Объекты осмотра, белые мраморные скалы и конечно знаменитая Смотровая площадка.</p>
-
-					<p>Подъем на смотровую площадку в 100 метрах над землей. <br>
-					Уникальное сооружение на отвесной скале, аналогов которому нет нигде в округе</p>
-
-					<p>Зайти может каждый, от ребенка до пожилого человека. <br>
-					Дети до 7 лет - бесплатно.</p>
-
-					<p>- Стоимость – <b>250 руб</b> с человека.</p>
-				</div>
+		</div>	
+		<div class="facts__divider"></div>
+		<div class="facts__item">
+			<div class="facts__title">Что это такое мрамор?</div>
+			<div class="facts__text">
+				От (др.греч — «белый или блестящий камень») — горная порода, состоящая только из кальцита. Образование мрамора — результат процесса, когда, под воздействием определённых физико-химических условий, структура известняка существенно изменяется.
 			</div>
-		</div>
-
-
-
-
-
-
-
+		</div>	
+		<div class="facts__divider"></div>
+		<div class="facts__item">
+			<div class="facts__title">Кибик-Кордонское месторождение мрамора</div>
+			<div class="facts__text">
+				Та самая белая гора, которую видно на много километров ото всюду. Мрамор здесь не только белый. Его более 10 видов. Есть и кремовый, оранжевый, бледно-розовый, жёлтый и зеленовато-серый. <br>
+				Добыча мрамора в этом месте ведется еще с конца 19 века. <br>
+				Месторождение является крупнейшим в России. <br>
+				Протяженность мраморного пласта около 18 км, толщина его доходит до 500 м. <br>
+				Жила начинается с горы в районе Гладенькой проходит по дну Енисея и заканчивается в районе деревни Голубая, в Красноярском крае.
+			</div>
+		</div>	
+		<div class="facts__divider"></div>
+		<div class="facts__item">
+			<div class="facts__title">Где сейчас наш мрамор в Мире?</div>
+			<div class="facts__text">
+				Мрамором из Кибик-Кордонского месторождения были облицованы станции метро в Москве (например, "Марксистская", "Третьяковская"), Санкт-Петербурге, Харькове, Ташкенте, Минске. Есть он во внутренней облицовке Белорусского вокзала в Москве, аэровокзалов в Ростове-на-Дону и Казани, а так же Красноярского театра оперы и балета. <br>
+				Мрамор использовался при воссоздании Храма Христа Спасителя, при реконструкции Большого театра и еще много других объектов.
+			</div>
+		</div>	
 	</div>
 </div>
+
+
+<div class="slk">
+	<div class="slk__iner">
+    <div class="slk__photo">
+      <div class="slider slider-1">
+        <div class="item" style="background-image: url(img/history/70_1.jpg);"></div>
+        <div class="item" style="background-image: url(img/history/70_2.jpg);"></div>
+        <div class="item" style="background-image: url(img/history/70_3.jpg);"></div>
+        <div class="item" style="background-image: url(img/history/70_4.jpg);"></div>
+      </div>
+      <div class="slider slider-nav nav-1">
+        <div class="item_nav" style="background-image: url(img/history/70_1.jpg);"></div>
+        <div class="item_nav" style="background-image: url(img/history/70_2.jpg);"></div>
+        <div class="item_nav" style="background-image: url(img/history/70_3.jpg);"></div>
+        <div class="item_nav" style="background-image: url(img/history/70_4.jpg);"></div>
+      </div>
+    </div>
+
+    <div class="slk__text">
+        <h2 class="slk__title">70-80-ые гг Начало</h2>
+        <p>Первые соревнования по скалолазанию на Мраморной горе были проведены 1975 году.</p>
+		<p>Проводили их знаменитые Красноярские спортсмены, скалолазы, альпинисты, столбисты.</p>
+		<p>Соревнования на приз газеты Красноярского Комсомола.</p>
+		<p>После первых мероприятий скальный массив начали регулярно посещать местные скалолазы, которые трудились над возведением крупнейшей в России Саяно-Шушенской ГЭС.</p>
+		<p>Была привезена техника. Люди много времени уделяли тому, чтобы привести скальный массив в то состояние, в котором он прибывает до сих пор. Скала почищена от большого количества разрушенной породы и установлены сетки-ловушки.</p>
+    </div>
+    </div>
+</div>
+
+
+<div class="history__note-1">
+Сформировался большой костяк из трудящейся молодежи. На скалы регулярно выезжали любители и профессионалы. Устраивали соревнования и просто лазали для себя, приятно проводя время в компании друзей. <br>
+Помимо Мраморки активно лазали по Гранитным Столбам в районе горнолыжного комплекса Гладенькая и ходили в район горного хребта Борус.	
+</div>
+
+
+<div class="galary-1">
+	<div class="galary-1__top" style="background-image: url(img/history/galary-1_1.jpg);"></div>
+	<div class="galary-1__bottom">
+		<div class="galary-1__item" style="background-image: url(img/history/galary-1_2.jpg);"></div>
+		<div class="galary-1__item" style="background-image: url(img/history/galary-1_3.jpg);"></div>
+		<div class="galary-1__item" style="background-image: url(img/history/galary-1_4.jpg);"></div>
+	</div>
+</div>
+
+<div class="slk">
+	<div class="slk__iner">
+    <div class="slk__photo">
+      <div class="slider slider-2">
+        <div class="item" style="background-image: url(img/history/80_1.jpg);"></div>
+        <div class="item" style="background-image: url(img/history/80_2.jpg);"></div>
+        <div class="item" style="background-image: url(img/history/80_3.jpg);"></div>
+        <div class="item" style="background-image: url(img/history/80_4.jpg);"></div>
+      </div>
+      <div class="slider slider-nav nav-2">
+        <div class="item_nav" style="background-image: url(img/history/80_1.jpg);"></div>
+        <div class="item_nav" style="background-image: url(img/history/80_2.jpg);"></div>
+        <div class="item_nav" style="background-image: url(img/history/80_3.jpg);"></div>
+        <div class="item_nav" style="background-image: url(img/history/80_4.jpg);"></div>
+      </div>
+    </div>
+
+    <div class="slk__text">
+        <h2 class="slk__title">80-90-ые гг</h2>
+			<p>Выезды на скалы продолжались. Некоторые люди в компании менялись, появлялись новые. <br>
+			К концу 90-х активность начала резко падать.</p>
+    </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
 
 
 
@@ -90,5 +172,35 @@
         </div>
     </div>
 </div>
+<script>
+$(document).ready(function(){
+$('.slider-1').slick({
+   slidesToShow: 1,
+   arrows: false,
+   fade: true
+ });
+ $('.nav-1').slick({
+   slidesToShow: 4,
+   asNavFor: '.slider-1',
+   focusOnSelect: true,
+   arrows: false,
+   variableWidth: true
+ });
+
+$('.slider-2').slick({
+   slidesToShow: 1,
+   arrows: false,
+   fade: true
+ });
+ $('.nav-2').slick({
+   slidesToShow: 4,
+   asNavFor: '.slider-2',
+   focusOnSelect: true,
+   arrows: false,
+   variableWidth: true
+ });
+
+ });
+ </script>
 </body>
 </html>
